Added open license

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Tilak",
+    "name": "tilak",
     "displayName": "Tilak Dark Theme",
     "description": "a dark theme by deepesh dhakal",
     "version": "0.0.1",
