--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "name": "tilak",
+    "publisher": "DeepeshDhakal",
     "displayName": "Tilak Dark Theme",
     "description": "a dark theme by deepesh dhakal",
+    "repository": "https://github.com/deepyes02/deepyes02dark",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.68.0"
