--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "a dark theme by deepesh dhakal",
     "repository": "https://github.com/deepyes02/deepyes02dark",
     "version": "0.0.3",
-    "icon": "assets/logo.png",
+    "icon": "https://github.com/deepyes02/deepyes02dark/assets/logo.png",
     "engines": {
         "vscode": "^1.68.0"
     },
